fix some scroller issues on mobile devices

--- a/src/components/emby-scrollbuttons/emby-scrollbuttons.css
+++ b/src/components/emby-scrollbuttons/emby-scrollbuttons.css
@@ -1,12 +1,3 @@
-.emby-scroller-container {
-    position: relative;
-}
-
-.emby-scroller {
-    margin-left: 4em;
-    margin-right: 4em;
-}
-
 .emby-scrollbuttons {
     position: absolute;
     top: 0;
