--- a/src/components/themes/dark/theme.css
+++ b/src/components/themes/dark/theme.css
@@ -19,10 +19,10 @@ html {
     background-color: #101010
 }
 
-.skinHeader .semiTransparent {
+.skinHeader.semiTransparent {
     -webkit-backdrop-filter: none !important;
     backdrop-filter: none !important;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .pageTitleWithDefaultLogo {
